add content to new.html

--- a/new.html
+++ b/new.html
@@ -1,5 +1,10 @@
 <html>
 	<body>
-		
+		<div>
+			<ul>
+				<li>sunglasses</li>
+				<li>outdoor furniture</li>
+			</ul>
+		</div>
 	</body>
 </html>
