--- a/new.html
+++ b/new.html
@@ -2,7 +2,7 @@ f<html>
 	<body>
 		<div>
 			<ul>
-				<li>sunglasses for women</li>
+				<li>more and pretty sunglasses for woemn</li>
 				<li>outdoor furniture</li>
 			</ul>
 		</div>
