--- a/new.html
+++ b/new.html
@@ -2,11 +2,7 @@ f<html>
 	<body>
 		<div>
 			<ul>
-<<<<<<< HEAD
-				<li>more and pretty sunglasses for woemn</li>
-=======
-				<li>sunglasses for girl under 19</li>
->>>>>>> f17fb6b19114959cebacbc065f6d600e72f0261b
+				<li>more and pretty sunglasses</li>
 				<li>outdoor furniture</li>
 			</ul>
 		</div>
