--- a/new.html
+++ b/new.html
@@ -2,11 +2,7 @@ f<html>
 	<body>
 		<div>
 			<ul>
-<<<<<<< HEAD
-				<li>more and pretty sunglasses</li>
-=======
-				<li>sunglasses for girl are pretty</li>
->>>>>>> f107802b3eb118c203244ffe98ee9a84e05116fe
+				<li>more and pretty sunglasses for fun</li>
 				<li>outdoor furniture</li>
 			</ul>
 		</div>
